--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,11 @@
-<h1>( ͡° ͜ʖ ͡°)</h1>
+<html>
+				<head>
+								<title>REVI STUFF</title>
+				</head>
+				<body>
+
+								<h1>( ͡° ͜ʖ ͡°)</h1>
+
+				<body>
+
+</html>
