added favicon CHANGE THIS TO LOGO

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <html>
 				<head>
 								<title>REVI STUFF</title>
+								<link rel="icon" href="http://res.cloudinary.com/urbandictionary/image/upload/a_exif,c_fit,h_200,w_200/v1395991705/gjn81wvxqsq6yzcwubok.png">
 				</head>
 				<body>
 
