--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>RAVI</title>
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'index.css') }}">
 	</head>
 	<body>
 		<center>
@@ -21,5 +22,4 @@
 			</table>
 		</center>
 		<body>
-
 </html>
