--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>RAVI</title>
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'index.css') }}">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="{{ url_for('static', filename = 'index.js') }}"></script>
 	</head>
 	<body>
