--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
 					{% endfor %}
 				</tr>
 				{% for row in body %}
-				<tr id="Col: {{loop.index0}}">
+				<tr id="Row_{{loop.index0}}">
 					{% for rowrow in row %}
-					<td class="data" id="Cell: {{loop.index0}}">{{ rowrow }}</td>
+					<td class="data" id="Cell_{{loop.index0}}">{{ rowrow }}</td>
 					{% endfor %}
 				</tr>
 				{% endfor %}
