--- a/templates/index.html
+++ b/templates/index.html
@@ -34,21 +34,23 @@
 
 		<center>
 			<button type="button" onclick="changeCell()">Ændre celle</button>
-			<table border="1" cellpadding="5" cellspacing="5">
-				<tr>
-					{% for row in headers %}
-					<th>{{ row }}</th>
+			<div id="table">
+				<table border="1" cellpadding="5" cellspacing="5">
+					<tr>
+						{% for row in headers %}
+						<th>{{ row }}</th>
+						{% endfor %}
+					</tr>
+					{% for row in body %}
+					<tr>
+						{% for rowrow in row %}
+						{# Rowrow, row your boat. #}
+						<td class="data">{{ rowrow }}</td>
+						{% endfor %}
+					</tr>
 					{% endfor %}
-				</tr>
-				{% for row in body %}
-				<tr>
-					{% for rowrow in row %}
-					{# Rowrow, row your boat. #}
-					<td class="data">{{ rowrow }}</td>
-					{% endfor %}
-				</tr>
-				{% endfor %}
-			</table>
+				</table>
+			<div>
 			<div class="xButtons" align="left">
 				<p>Horisontal række</p>
 				<button class="button" type="button" onclick="newRow('y')">Tilføj række</button>
