Added add cell button

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<center>
+			<button id="add">Add cell</button>
 			<div id="table">
 				<table border="1" cellpadding="5" cellspacing="5">
 					<tr>
