--- a/static/index.css
+++ b/static/index.css
@@ -1,3 +1,5 @@
+/* CSS3 */
+
 .data {
   font-family: arial;
 }
@@ -24,4 +26,32 @@
   border:1px solid;
   padding:10px;
   font-family: arial;
+}
+
+/*Right click menu CSS*/
+/* The whole thing */
+.custom-menu {
+    display: none;
+    z-index: 1000;
+    position: absolute;
+    overflow: hidden;
+    border: 1px solid #CCC;
+    white-space: nowrap;
+    font-family: sans-serif;
+    background: #FFF;
+    color: #333;
+    border-radius: 5px;
+    padding: 0;
+}
+
+/* Each of the items in the list */
+.custom-menu li {
+    padding: 8px 12px;
+    cursor: pointer;
+    list-style-type: none;
+    transition: all .3s ease;
+}
+
+.custom-menu li:hover {
+    background-color: #DEF;
 }
