--- a/templates/index.html
+++ b/templates/index.html
@@ -28,5 +28,11 @@
 					{% endfor %}
 				</table>
 		</center>
+		<ul class='custom-menu'>
+		  <li data-action="first">First thing</li>
+		  <li data-action="second">Second thing</li>
+		  <li data-action="third">Third thing</li>
+		</ul>
+		<script src="{{ url_for('static', filename = 'rightClick.js') }}"></script>
 		<body>
 </html>
