Made the color options work on the front end, needs back end intergration

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,9 @@
 				</table>
 		</center>
 		<ul class='custom-menu'>
-		  <li data-action="first">First thing</li>
-		  <li data-action="second">Second thing</li>
-		  <li data-action="third">Third thing</li>
+		  <li data-action="red" style="color: #ff0000">Rød</li>
+		  <li data-action="yellow" style="color: #ffe600">Gul</li>
+		  <li data-action="green" style="color: #63eb05">Grøn</li>
 		</ul>
 		<script src="{{ url_for('static', filename = 'rightClick.js') }}"></script>
 		<body>
