Database for colours is set up now

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,5 +34,8 @@
 		  <li data-action="green" style="color: #63eb05">Grøn</li>
 		</ul>
 		<script src="{{ url_for('static', filename = 'rightClick.js') }}"></script>
+		<p onclick="console.log({{colours}});">
+			kek man
+		</p>
 		<body>
 </html>
