--- a/templates/bom.html
+++ b/templates/bom.html
@@ -4,41 +4,12 @@
     
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat">
     
-    <style>
-      body{
-        font-family: montserrat;
-      }
-      
-      .button{
-        background-color: #2ecc71;
-        font-size: 100%;
-        border: 0px;
-        color: white;
-        font-family: montserrat;
-        width: 20%;
-        height: 5%;
-      }
-      
-      .button:hover{
-        background-color: #27ae60;
-        font-size: 100%;
-        border: 0px;
-        color: white;
-        font-family: montserrat;
-        width: 20%;
-        height: 5%;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'bom.css') }}">
     
     
     
   </head>
   <body>
-    <script>
-      function sendFil(){
-        console.log("filer");
-      }
-    </script>
     <center>
       
       <form action="" method=post enctype=multipart/form-data>
