Added locale jquery, and upload temp folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,9 @@
 		<title>RAVI</title>
 		<link rel="icon" href="http://ravi.dk/onewebstatic/368cade015-Ravi-Electronics_logo_blaa.png"/>
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'index.css') }}">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+		<script src="{{ url_for('static', filename = 'jquery-3.0.0.min.js') }}"></script>
 		<script src="{{ url_for('static', filename = 'index.js') }}"></script>
+
 
 	</head>
 	<body>
