--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@
 				</table>
 		</center>
 		<ul class='custom-menu'>
+			<li data-action="white" style="color: #000000">Hvid</li>
 		  <li data-action="red" style="color: #ff0000">Rød</li>
 		  <li data-action="yellow" style="color: #ffe600">Gul</li>
 		  <li data-action="green" style="color: #63eb05">Grøn</li>
