Removed memes from 404 page

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
 <center style="font-family:courier;">
 	<h1>404</h1>
-	<h3>Vi har desvære ikke det du leder efter.</h3>
-	<h3>Har du skrevet webadressen rigtigt?</h3>
-	<img src="{{ url_for('static', filename = '404.gif') }}">
+	<h3>Dette er desvære ikke et gyldigt link. Mente du måske</h3>
+	<a href="/bom">Bom</a><br>
+	<a href="/">Hjem</a>
 </center>
