--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,10 @@
 				{% else %}
 				<button type="submit" style="color:red;">Skjul komplette emner</button>
 				{% endif %}
+
 			</form>
 			<button id="add" style="display:inline">Tilføj emne</button>
+			<a href="/csv">Download som CSV</a>
 			<br></br>
 			<div id="table">
 				<table border="1" cellpadding="5" cellspacing="5">
