--- a/RAVI/templates/board/index.html
+++ b/RAVI/templates/board/index.html
@@ -39,16 +39,16 @@
 					</tr>
 					{% for row in body %}
 					{% with y=forloop.counter0 rowData=row.0 %}
-					<tr id="{{rowData.0}}">
+					<tr id="{{rowData.0.0}}">
 						{% for rowrow in row.0 %}
-						{% with x=forloop.counter0  %}
-						<td class="data" id="Cell_{{ forloop.counter0 }}_{{rowData.0}}" style="background-color: {{colours.y.x }}">{{ rowrow }}</td>
+						{% with x=forloop.counter0 rowColours=colours.y %}
+						<td class="data" id="Cell_{{ forloop.counter0 }}_{{rowData.0.0}}" style="background-color: {{ rowrow.1 }}">{{ rowrow.0 }}</td>
 						{% endwith %}
 						{% endfor %}
 						{% if row.1 == "True" %}
-						<td><input test="{{row.1}}" type="checkbox" onclick="hideRow({{rowData.0}})" id="hide{{forloop.counter0}}" checked ></input></td>
+						<td><input type="checkbox" onclick="hideRow({{rowData.0.0}})" id="hide{{forloop.counter0}}" checked ></input></td>
 						{% else %}
-						<td><input test="{{row.1}}" type="checkbox" onclick="hideRow({{rowData.0}})" id="hide{{forloop.counter0}}"></input></td>
+						<td><input type="checkbox" onclick="hideRow({{rowData.0.0}})" id="hide{{forloop.counter0}}"></input></td>
 						{% endif %}
 					</tr>
 					{% endwith %}
